--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
             <div class="chapters-menu">
                 <button class="chapter-button active" data-chapter="1">Capitolo 1</button>
                 <button class="chapter-button" data-chapter="2">Capitolo 2</button>
+                <button class="chapter-button" data-chapter="3">Capitolo 3</button>
             </div>
         </header>
         
@@ -278,6 +279,14 @@
                     messages: [
                         "Ne valsa la pena!!!",
                         "Ma anche kebab come dice Roman non era male :3",
+                    ]
+                },
+                3: {
+                    title: "Vendetta del kebab",
+                    image: "index3.png", 
+                    messages: [
+                        "Che ce Roman non sfotti piu ?!!",
+                        "Mangerai cio che dico io !!!"
                     ]
                 }
             };
