--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
                 <button class="chapter-button active" data-chapter="1">Capitolo 1</button>
                 <button class="chapter-button" data-chapter="2">Capitolo 2</button>
                 <button class="chapter-button" data-chapter="3">Capitolo 3</button>
+                <button class="chapter-button" data-chapter="4">Capitolo 4</button>
             </div>
         </header>
         
@@ -287,6 +288,14 @@
                     messages: [
                         "Che ce Roman non sfotti piu ?!!",
                         "Mangerai cio che dico io !!!"
+                    ]
+                },
+                4: {
+                    title: "La riconciliazione",
+                    image: "index4.png", 
+                    messages: [
+                        "Dai facciamo pace, mangiamo insieme!",
+                        "Cornetti per tutti , così siamo tutti contenti!"
                     ]
                 }
             };
