--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
                 <button class="chapter-button" data-chapter="2">Capitolo 2</button>
                 <button class="chapter-button" data-chapter="3">Capitolo 3</button>
                 <button class="chapter-button" data-chapter="4">Capitolo 4</button>
+                <button class="chapter-button" data-chapter="5">Capitolo 5</button>
             </div>
         </header>
         
@@ -296,6 +297,14 @@
                     messages: [
                         "Dai facciamo pace, mangiamo insieme!",
                         "Cornetti per tutti , così siamo tutti contenti!"
+                    ]
+                },
+                5: {
+                    title: "La grande battaglia del oriente",
+                    image: "index5.png", 
+                    messages: [
+                        "E allora ... indossero il mio abitto da battaglia del kebabaro migliore!",
+                        "Panino alla scipollaaaa vieni a meeeee!!!"
                     ]
                 }
             };
