--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@ p {
                     title: "La grande battaglia del oriente",
                     image: "index5.png", 
                     messages: [
-                        "E allora ... indossero il mio abitto da battaglia del kebabaro migliore!",
+                        "E allora ... indossero il mio abito da battaglia del kebabaro migliore!",
                         "Panino alla scipollaaaa vieni a meeeee!!!"
                     ]
                 }
