--- a/index.html
+++ b/index.html
@@ -183,12 +183,12 @@
             opacity: 1;
         }
 
-p {
-    display: block;
-    margin-bottom: 5px;
-    color: #062946;
-    font-weight: bold;
-}
+        p {
+            display: block;
+            margin-bottom: 5px;
+            color: #062946;
+            font-weight: bold;
+        }
         
         /* Media Queries per responsività */
         @media (max-width: 768px) {
@@ -251,6 +251,7 @@ p {
                 <button class="chapter-button" data-chapter="3">Capitolo 3</button>
                 <button class="chapter-button" data-chapter="4">Capitolo 4</button>
                 <button class="chapter-button" data-chapter="5">Capitolo 5</button>
+                <button class="chapter-button" data-chapter="6">Capitolo 6</button>
             </div>
             <p>Copyright &copy2025; Created&Designed by <a href="https://cat-bounce.com">Roman Modugno</a></span></p>
         </header>
@@ -314,6 +315,15 @@ p {
                     messages: [
                         "E allora ... indossero il mio abito da battaglia del kebabaro migliore!",
                         "Panino alla scipollaaaa vieni a meeeee!!!"
+                    ]
+                },
+                6: {
+                    title: "La sfida estiva",
+                    image: "index6.png", 
+                    messages: [
+                        "Non sono sicuro di essere qui per aiutarti!",
+                        "VOGLIO LA TARTARUGA !!!"
+                        
                     ]
                 }
             };
