--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                     image: "index6.png", 
                     messages: [
                         "Non sono sicuro di essere qui per aiutarti!",
-                        "VOGLIO LA TARTARUGA !!!"
+                        "VOGLIO LA TARTARUGA !!!MA PRIMA CORNETTO!!! "
                         
                     ]
                 }
