--- a/index.html
+++ b/index.html
@@ -378,7 +378,9 @@
                     messages: [
                         "Verso il panino al tonno e oltre !!!",
                         "OHHH non prendermi in giro ",
-                    ]
+                    ],
+                    hasAudio: true,
+                    audioFile: "chapter1.mp3"
                 },
                 2: {
                     title: "La scoperta",
@@ -386,7 +388,9 @@
                     messages: [
                         "Ne valsa la pena!!!",
                         "Ma anche kebab come dice Roman non era male :3",
-                    ]
+                    ],
+                    hasAudio: true,
+                    audioFile: "chapter2.mp3"
                 },
                 3: {
                     title: "Vendetta del kebab",
@@ -394,7 +398,9 @@
                     messages: [
                         "Che ce Roman non sfotti piu ?!!",
                         "Mangerai cio che dico io !!!"
-                    ]
+                    ],
+                    hasAudio: true,
+                    audioFile: "chapter3.mp3"
                 },
                 4: {
                     title: "La riconciliazione",
