--- a/index.html
+++ b/index.html
@@ -321,12 +321,12 @@
             <h1>La carica di Alessia</h1>
             <div id="chapterTitle" class="chapter-title">Capitolo 1: Assalto al paninaro </div>
             <div class="chapters-menu">
-                <button class="chapter-button active" data-chapter="1">Capitolo 1</button>
-                <button class="chapter-button" data-chapter="2">Capitolo 2</button>
-                <button class="chapter-button" data-chapter="3">Capitolo 3</button>
-                <button class="chapter-button" data-chapter="4">Capitolo 4</button>
-                <button class="chapter-button" data-chapter="5">Capitolo 5</button>
-                <button class="chapter-button has-audio" data-chapter="6">Capitolo 6</button>
+                <button class="chapter-button has-audio active" data-chapter="1">Capitolo 1</button>
+                <button class="chapter-button has-audio active" data-chapter="2">Capitolo 2</button>
+                <button class="chapter-button has-audio active" data-chapter="3">Capitolo 3</button>
+                <button class="chapter-button active" data-chapter="4">Capitolo 4</button>
+                <button class="chapter-button active" data-chapter="5">Capitolo 5</button>
+                <button class="chapter-button has-audio active" data-chapter="6">Capitolo 6</button>
             </div>
             <p>Copyright &copy2025; Created&Designed by <a href="https://cat-bounce.com">Roman Modugno</a></span></p>
         </header>
