--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
                     title: "La grande battaglia del oriente",
                     image: "index5.png", 
                     messages: [
-                        "Polpettina:E allora ... indossero il mio abito da battaglia del kebabaro migliore!",
+                        "Polpettina:E allora ... indossero il mio abito da battaglia migliore per  kebabaro !",
                         "Polpettina:Panino alla scipollaaaa vieni a meeeee!!!"
                     ]
                 },
