--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@
             font-size: 2.1rem;
             max-width: 400px;
             margin: 0 auto;
+            margin-right: 1.8em;
         }
         
         
