--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
                         "Orso:Fiiiii andiamo a mangiare :3!!! "
                         
                     ],
-                    hasAudio: true,
+                    hasAudio: false,
                     audioFile: "chapter9.mp3",
                     hasQuestion: true
                 }
